Corrected issue with .wrap width overriding .container and .container-fluid

--- a/assets/scss/supporting/partials/_layout.scss
+++ b/assets/scss/supporting/partials/_layout.scss
@@ -13,13 +13,13 @@ input[type="search"] {
 /* Wrap
 --------------------------------------------- */
 
-.wrap {
+/*.wrap {
     max-width: map-get( $breakpoints, 'desktop' );
     margin: 0 auto;
 	padding-left:  ($grid-gap / 2);
 	padding-right: ($grid-gap / 2);
 	@include clearfix;
-}
+}*/
 
 .site-inner {
 	padding: 36px 0;
