--- a/assets/scss/supporting/partials/_navigation.scss
+++ b/assets/scss/supporting/partials/_navigation.scss
@@ -1,6 +1,14 @@
 /* Navigation
 ---------------------------------------------------------------------------------------------------- */
 
+.navbar {
+  .container,
+  .container-fluid {
+	width: 100%;
+	max-width: 100%;
+  }
+}
+
 .nav-menu {
 
 	& > * {
